--- a/CSS-2/css/05image.css
+++ b/CSS-2/css/05image.css
@@ -25,8 +25,10 @@ p{
     font-family: Merriweather;
     font-size: 30px;
     font-weight: 400 ; 
-    margin-left: 1.6%;
+    /*width:20%;*/
+    margin: 0 auto;
     text-transform: uppercase;
     padding-bottom: 20px;
-    text-align: center;
+    /*text-align: center;*/
+    
 }
